# CobaltOS

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
config/applications/: cobalt-installer.desktop  cobalt-welcome.desktop
config/audio/: README.md
config/audio/ucm2/atlas/: HiFi.conf  atlas.conf
config/audio/ucm2/eve/: HiFi.conf  eve.conf
config/audio/ucm2/generic-hda/: HiFi.conf  generic-hda.conf
config/audio/ucm2/nami/: HiFi.conf  nami.conf
config/boot/: cobalt.conf.template  loader.conf
config/cosmic/: theme.toml
config/keyd/: chromebook.conf
config/keyd/boards/: atlas.conf  nami.conf  pixelbook.conf
config/libinput/boards/: atlas.conf  eve.conf  generic.conf  nami.conf
config/live/: 10-cobaltos.conf  autostart-installer.sh  cobalt-installer-live.desktop
config/plymouth/cobalt/: ASSETS.md  cobalt.plymouth  cobalt.script  generate-assets.sh
config/systemd/: cobalt-first-boot.service  cobalt-flatpak-install.service  cobalt-hardware-probe.service  cobalt-update.service  cobalt-update.timer  cobalt-welcome.service
config/zram/: zram-generator.conf
config/zsh/: .zshrc  starship.toml
docs/: index.html
docs/assets/css/: style.css
docs/assets/js/: main.js
docs/devices/: index.html
docs/install/: index.html
hardware-probe/: Cargo.toml
hardware-probe/src/: audio.rs  display.rs  dmi.rs  gestures.rs  keyboard.rs  main.rs  power.rs  service.rs  touchpad.rs
installer/: Cargo.toml
installer/src/: config.rs  hardware.rs  installer.rs  main.rs  partition.rs  tui.rs  ui.rs
oobe/: Cargo.toml
oobe/src/: app.rs  main.rs  pages.rs  theme.rs
oobe/src/pages/: mod.rs
update-manager/: Cargo.toml
update-manager/src/: apt.rs  daemon.rs  flatpak.rs  main.rs  notify.rs  rollback.rs
welcome/: Cargo.toml
welcome/src/: app.rs  main.rs  pages.rs  theme.rs
welcome/src/pages/: mod.rs
