[workspace]
members = [
    "installer",
    "hardware-probe",
    "update-manager",
    "welcome",
    "oobe",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["CobaltOS Contributors"]
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GUI framework (Rust-native, used by COSMIC)
iced = { version = "0.12", features = ["tokio", "svg", "image"] }

# TUI framework
ratatui = "0.26"
crossterm = "0.27"

# D-Bus (for system integration)
zbus = { version = "4", features = ["tokio"] }

# System info / hardware detection
sysinfo = "0.30"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
