[package]
name = "cobalt-hardware-probe"
description = "CobaltOS first-boot hardware detection daemon"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "cobalt-hardware-probe"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true
sysinfo.workspace = true
