[package]
name = "cobalt-installer"
description = "CobaltOS guided installer — GUI (iced) and TUI (ratatui) modes"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "cobalt-installer"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
iced.workspace = true
ratatui.workspace = true
crossterm.workspace = true
zbus.workspace = true
sysinfo.workspace = true

[features]
default = ["gui"]
gui = []
tui = []
