[package]
name = "cobalt-oobe"
description = "CobaltOS out-of-box experience — runs before the desktop on first login"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "cobalt-oobe"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
iced.workspace = true
zbus.workspace = true
